--- a/myapp/bs-container-example.html
+++ b/myapp/bs-container-example.html
@@ -41,6 +41,19 @@
                       <label class="form-check-label" for="exampleCheck1">Check me out</label>
                     </div>
                     <button type="submit" class="btn btn-primary">Submit</button>
+                    
+                    <div class="dropdown">
+                      <label for="dropdown">Email address</label>
+                      <button id="dropdown" class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        *Select Instructor
+                      </button>
+                      <ul class="dropdown-menu">
+                        <li><a class="dropdown-item" href="#">XXX</a></li>
+                        <li><a class="dropdown-item" href="#">AAA</a></li>
+                        <li><a class="dropdown-item" href="#">BBB</a></li>
+                      </ul>
+                    </div>
+                   
                   </form>
             </div>
         </div>
