--- a/JSExamples2/es6-samples.html
+++ b/JSExamples2/es6-samples.html
@@ -4,17 +4,16 @@
     <title>ES6 Samples</title>
     <meta charset="utf-8" />
     <script src="js/operations.js"></script>
-    <script src="js/main.js" type="module" />
    
     <script>
-        test();
+        objectLiterals();
+        destructuringAssignments();
     </script>
 
 </head>
 
 <body>
     Hello ES6
-
 </body>
 
 </html>
