--- a/myapp/createCourse.html
+++ b/myapp/createCourse.html
@@ -17,7 +17,7 @@
         <div class="row justify-content-center">
             <div class="col-sm-4">
                 <h2>Create a new course</h2>
-                <form method="post" action="success.html" onsubmit="return validateFormData()">
+                <form method="post" action="success.html" onsubmit="return saveCourse()">
                     <div class="mb-3">
                         <label for="courseCode" class="form-label">Course Code</label>
                         <input type="text" class="form-control" id="courseCode" placeholder="CS-999">
