--- a/myapp/success.html
+++ b/myapp/success.html
@@ -10,10 +10,11 @@
     crossorigin="anonymous">
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     crossorigin="anonymous"></script>
-
+    <script src="assets/js/myfunctions.js"></script>  
 
 <body>
-    success
+    <button onclick="printCourses()">Print Courses</button>
+    <div id="courseList"></div>
 </body>
 
 </html>
